# flsdk

./: .gitignore  AUTHORS  COPYRIGHT  ChangeLog  INSTALL  INSTALL.txt  Makefile  Makefile.in  aclocal.m4  autogen.sh  config.status  configure  configure.ac  jtsdk.html  pkg-info.txt
autom4te.cache/: output.0  requests  traces.0
data/: flsdk.desktop  flsdk.desktop.in  flsdk.menu.in  flsdk.xpm  hamlib.mk  mxe-env.export
debian/: changelog  control  copyright  flsdk.dirs  flsdk.docs  flsdk.install  flsdk.manpages  flsdk.menu  rules  watch
doc/source/: docinfo.html  flsdk-main.adoc  flsdk-wsl-setup.adoc  flsdk.html  install-main.adoc  install-mint.adoc  install-raspbian.adoc  install-ubuntu.adoc  overview.adoc
docs/source/: flsdk-main.adoc  install-mint.adoc  install-ubuntu.adoc  license.adoc  overview.adoc
m4/: debian.m4  distro.m4  docs.m4  manpages.m4  mint.m4  parallel.m4  pkginfo.m4  python3.m4  separate.m4  ubuntu.m4  win10.m4
man/: flsdk-fllog.1.txt.in  flsdk-flrig.1.txt.in  flsdk-flwrap.1.txt.in  flsdk-hamlibmk.1.txt.in  flsdk-setup.1.txt.in  flsdk-test-url.1.txt.in  flsdk-version.1.txt.in  flsdk-versions.1.txt.in  flsdk.1.txt  flsdk.1.txt.in
manpages/: flsdk-flmsg.1.txt.in  flsdk-flnet.1.txt.in  flsdk-flwkey.1.txt.in  flsdk.1.txt.in
rpm/: README
src/: build-fldigi.sh  flsdk  flsdk-flamp.in  flsdk-fldigi.in  flsdk-fllog.in  flsdk-flmsg.in  flsdk-flnet.in  flsdk-flnet.sh.in  flsdk-flrig.in  flsdk-flwkey.in  flsdk-flwrap.in  flsdk-hamlibmk  flsdk-hamlibmk.in  flsdk-setup.in  flsdk-setup.sh  flsdk-test-url  flsdk-test-url.in  flsdk-version  flsdk-version-check  flsdk-version-check.sh.in  flsdk-version.in  flsdk-versions.in  flsdk.in  flsdk.sh.in  test-version-urls.py
src/config/: fldigi-watch  flrig-alpha-watch  flwkey-alpha-watch  flwkey-watch
src/docs/source/: install-raspbian.adoc
src/manpages/: flsdk-flamp.1.txt.in  flsdk-fldigi.1.txt.in  flsdk-versions.1.txt.in
src/menu/: main_menu_help.txt
src/watch/: comptext-alpha-watch  comptext-watch  comptty-alpha-watch  comptty-watch  flamp-alpha-watch  flamp-watch  fldigi-alpha-watch  fllog-alpha-watch  fllog-watch  flmsg-alpha-watch  flmsg-watch  flnet-alpha-watch  flnet-watch  flrig-watch  flwrap-alpha-watch  flwrap-watch  linsim-alpha-watch  linsim-watch
